--- a/Lessons/Lesson8/task5/index.html
+++ b/Lessons/Lesson8/task5/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
 
 </head>
-<body>
+<body style="margin: 50px">
     <div>
       <div class="rect2">
         <div class="rect3"> 
