--- a/Lessons/Lesson8/task5/index.html
+++ b/Lessons/Lesson8/task5/index.html
@@ -13,7 +13,7 @@
     <div>
       <div class="rect2">
         <div class="rect3"> 
-          <div class="rect4"></div>
+          <div></div>
         </div>
       </div>
     </div>
