--- a/Lessons/Lesson8/task5/index.html
+++ b/Lessons/Lesson8/task5/index.html
@@ -5,11 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
-
+    <style>
+    body{
+      margin: 50px;
+    }
+    div{
+    background-color: blue;
+    border: 3px solid black;
+    box-sizing: border-box;
+    padding: 50px;
+  }
+  div>div{
+    background-color: yellow;
+  }
+  div>div>div{
+    background-color: green;
+  }
+  div>div>div>div{
+    background-color: pink;
+  }
+  
+    </style>
 </head>
-<body style="margin: 50px">
+<body>
     <div>
       <div class="rect2">
         <div class="rect3"> 
