--- a/Lessons/Lesson8/task5/index.html
+++ b/Lessons/Lesson8/task5/index.html
@@ -12,6 +12,7 @@
     background-color: blue;
     border: 3px solid black;
     padding: 50px;
+    margin: 50px;
   }
   div>div{
     background-color: yellow;
