--- a/Lessons/Lesson8/task5/index.html
+++ b/Lessons/Lesson8/task5/index.html
@@ -6,34 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
-    <style>
-    div{
-    box-sizing: border-box;
-    background-color: blue;
-    border: 3px solid black;
-    padding: 50px;
-    margin: 50px;
-  }
-  div>div{
-    background-color: yellow;
-  }
-  div>div>div{
-    background-color: green;
-  }
-  div>div>div>div{
-    background-color: pink;
-  }
-  
-    </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
-      <div class="rect2">
-        <div class="rect3"> 
+      <div>
+        <div>
           <div></div>
         </div>
       </div>
     </div>
+    
 </body>
 
 </html>
