--- a/Lessons/Lesson9/task3/index.html
+++ b/Lessons/Lesson9/task3/index.html
@@ -9,11 +9,11 @@
         integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
 </head>
 <body>
-    <div class="block1"></div>
-    <div class="block2"></div>
-    <div class="block3"></div>
-    <div class="block4"></div>
-    <div class="block5"></div>
+    <div class="block_red"></div>
+    <div class="block_green"></div>
+    <div class="block_yellow"></div>
+    <div class="block_blue"></div>
+    <div class="block_black"></div>
 </body>
 
 </html>
