--- a/Lessons/Lesson9/task5/index.html
+++ b/Lessons/Lesson9/task5/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"  content="width=5000, initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -19,8 +20,8 @@
       </nav>
     </header>
     <main class="main">
-        <div class="square1"></div>
         <div class="square2"></div>
+        <div class="square1"></div>
         <div class="square">
           <div class="circle1"></div>
           <div class="circle2"></div>
