--- a/Lessons/Lesson9/task5/index.html
+++ b/Lessons/Lesson9/task5/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"  content="width=5000, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -14,9 +14,9 @@
 <body>
     <header class="header">
       <nav>
-        <li>Home</li>
-        <li>Products</li>
-        <li>Contacts</li>
+        <li class="nav-item">Home</li>
+        <li class="nav-item">Products</li>
+        <li class="nav-item">Contacts</li>
       </nav>
     </header>
     <main class="main">
