--- a/Lessons/Lesson9/task5/index.html
+++ b/Lessons/Lesson9/task5/index.html
@@ -3,28 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
-       
 </head>
 
 <body>
     <header class="header">
-      <nav>
-        <li class="nav-item">Home</li>
-        <li class="nav-item">Products</li>
-        <li class="nav-item">Contacts</li>
-      </nav>
+        <nav class="nvigation">
+            <ul class="nav-list">
+                <li class="nav-item">Home</li>
+                <li class="nav-item">Products</li>
+                <li class="nav-item">Contacts</li>
+            </ul>
+        </nav>
     </header>
-    <main class="main">
-        <div class="square1"></div>
-        <div class="square2"></div>
-        <div class="square">
-          <div class="circle1"></div>
-          <div class="circle2"></div>
+    <main class="content">
+        <div class="head">
+            <div class="ear ear_right"></div>
+            <div class="ear ear_left"></div>
+            <div class="eye eye_right"></div>
+            <div class="eye eye_left"></div>
         </div>
     </main>
 </body>
