--- a/Lessons/Lesson10/task1/index.htm
+++ b/Lessons/Lesson10/task1/index.htm
@@ -21,6 +21,19 @@
             .vertical > span {
                 background-color: coral;
             }
+            .horizontal {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.vertical {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
         </style>
          <link rel="stylesheet" href="style.css">
 </head>
