--- a/Lessons/Lesson10/task2/index.html
+++ b/Lessons/Lesson10/task2/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
+
 </head>
 <body>
   <div class="container">
