--- a/Lessons/Lesson12/task1/index.html
+++ b/Lessons/Lesson12/task1/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="content">
+    <section>
         <h1 class="h1__title">Web technologies</h1>
         <p class="paragraph">
             <b class="techology">HTML</b> (от англ. <em class="translation">HyperText Markup Language</em> —
