--- a/Lessons/Lesson12/task1/index.html
+++ b/Lessons/Lesson12/task1/index.html
@@ -25,9 +25,7 @@
             интерпретации форматированный текст отображается на экране монитора компьютера или мобильного устройства.
         </p>
         <p class="paragraph">
-            <b class="techology">CSS</b> (англ. <em class="translation">Cascading Style Sheets</em> — каскадные
-            таблицы стилей) —
-            формальный
+            <b class="techology">CSS</b> (/siːɛsɛs/ англ. Cascading Style Sheets — каскадные таблицы стилей) — формальный
             язык описания внешнего вида документа, написанного с использованием языка разметки.
         </p>
     </section>
