--- a/Lessons/Lesson15/task1/index.html
+++ b/Lessons/Lesson15/task1/index.html
@@ -10,19 +10,19 @@
 </head>
 
 <body>
-    <div class="image-container"><img src="#ttps://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/big.jpeg" alt="Forest"></div>
+    <div class="image-container"><img src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/big.jpeg" alt="Forest"></div>
 
     <div class="gallery">
         <figure class="card">
-            <img class="opacity-filter" src="#https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="opacity">
+            <img class="opacity-filter" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="opacity">
             <figcaption class="caption">opacity</figcaption>
         </figure>
         <figure class="card">
-            <img class="blur-filter" src="#https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="blur">
+            <img class="blur-filter" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="blur">
             <figcaption class="caption">blur</figcaption>
         </figure>
         <figure class="card">
-            <img class="invert-filter" src="#https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="invert">
+            <img class="invert-filter" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson15/task1/small.jpg" alt="invert">
             <figcaption class="caption">invert</figcaption>
         </figure>
     </div>
