--- a/Lessons/Lesson16/task3/index.html
+++ b/Lessons/Lesson16/task3/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Checkbox</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+        integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <label class="checkbox">Checkbox
-        <input type="checkbox">
-        <span class="checkmark"></span>
+        <input id="custom-checkbox" type="checkbox">
+        <span class="checkmark" for="custom-checkbox"></span>
     </label>
 </body>
 
