--- a/Lessons/Lesson16/task5/index.html
+++ b/Lessons/Lesson16/task5/index.html
@@ -23,14 +23,16 @@
       <input type="number"  name="favouriteNumber" value="17" >
       <textarea id="story" name="story" rows="5" cols="30" placeholder="A long time ago..." ></textarea>
       <input type="password" name="password" value="secret">
+       <div class="languages">
         <label for="html"><input type="radio" name="language" value="html">HTML</label>
         <label for="css"><input  type="radio" name="language" value="css" checked>CSS</label>
-        <label for="javaScript"><input  type="radio" name="language" value="javaScript">JavaScript</label>   
+        <label for="javaScript"><input  type="radio" name="language" value="javaScript">JavaScript</label>  
+       </div> 
      <input type="range" name="learningProgress" value="30">
         <div>
           <select name="framework">
             <option value="react">React</option>
-            <option value="jquery" selected>Jquery</option>
+            <option value="jquery" selected>jQuery</option>
             <option value="bootstrap">Bootstrap</option>
           </select>
         </div>
