--- a/Lessons/Lesson16/task5/index.html
+++ b/Lessons/Lesson16/task5/index.html
@@ -24,9 +24,9 @@
       <textarea id="story" name="story" rows="5" cols="30" placeholder="A long time ago..." ></textarea>
       <input type="password" name="password" value="secret">
        <div class="languages">
-        <label for="html"><input type="radio" name="language" value="html">HTML</label>
-        <label for="css"><input  type="radio" name="language" value="css" checked>CSS</label>
-        <label for="javaScript"><input  type="radio" name="language" value="javaScript">JavaScript</label>  
+        <input type="radio" name="language" value="html">HTML
+        <input  type="radio" name="language" value="css" checked>CSS
+        <input  type="radio" name="language" value="javaScript">JavaScript
        </div> 
      <input type="range" name="learningProgress" value="30">
         <div>
