--- a/Lessons/Lesson21/task1/index.html
+++ b/Lessons/Lesson21/task1/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Page scaling</h1>
-    <img src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson21/task1/nature.jpeg" alt="Tree" width="500">
+    <img src="nature.jpeg" alt="Tree" width="500">
     <p>
         Старайтесь не задавать большим элементам фиксированные размеры - высоту и ширину. На устройствах с маленьким
         экраном это может спровоцировать появление горизонтальной полосы прокрутки. А все больше привыкли скроллить по
