--- a/Lessons/Lesson21/task2/index.html
+++ b/Lessons/Lesson21/task2/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>2D Transformation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" integrity="sha256-WAgYcAck1C1/zEl5sBl5cfyhxtLgKGdpI3oKyJffVRI=" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
-
 <body>
-   
+    <main class="content">
+        <section class="gallery">
+            <img class="image" src="nature.jpeg" alt="Land">
+        </section>
+        <aside class="ideas">
+            <span class="idea">Keep calm</span>
+        </aside>
+    </main>
 </body>
-
 </html>
