--- a/Lessons/Lesson21/task4/index.html
+++ b/Lessons/Lesson21/task4/index.html
@@ -15,21 +15,21 @@
     <main class="main">
         <nav class="navigation">
             <ul class="nav-list">
-                <li class="nav-list__item"><a href="#" class="nav-list__item__link">Responsive images</a></li>
-                <li class="nav-list__item"><a href="#" class="nav-list__item__link">Mediaqueries</a></li>
-                <li class="nav-list__item"><a href="#" class="nav-list__item__link">Flexbox</a></li>
+                <li class="nav-list-item"><a href="#" class="nav-list-link">Responsive images</a></li>
+                <li class="nav-list-item"><a href="#" class="nav-list-link">Mediaqueries</a></li>
+                <li class="nav-list-item"><a href="#" class="nav-list-link">Flexbox</a></li>
             </ul>
         </nav>
         <section class="section">
             <h2 class="section__header">True story</h2>
             <p>There are few ways to define <code>font-size</code>:</p>
-            <ul class="css-list">
-                <li><span class="css-list__item">px</span> are good if you need strict definition for a size of text. In other cases it is better to use relative units listed below.</li>
-                <li><span class="css-list__item">em</span> based on current font size</li>
-                <li><span class="css-list__item">rem</span> based on <code>&lt;html&gt;</code> font-size</li>
-                <li><span class="css-list__item">%</span> based on parent font size</li>
-                <li><span class="css-list__item">vh</span> (viewport height) based on screen height</li>
-                <li><span class="css-list__item">vw</span> (viewport width) based on screen width</li>
+            <ul class="units-list">
+                <li><span class="css-units">px</span> are good if you need strict definition for a size of text. In other cases it is better to use relative units listed below.</li>
+                <li><span class="css-units">em</span> based on current font size</li>
+                <li><span class="css-units">rem</span> based on <code>&lt;html&gt;</code> font-size</li>
+                <li><span class="css-units">%</span> based on parent font size</li>
+                <li><span class="css-units">vh</span> (viewport height) based on screen height</li>
+                <li><span class="css-units">vw</span> (viewport width) based on screen width</li>
             </ul>
         </section>
         <aside class="news">
