--- a/Lessons/Lesson22/task5/index.html
+++ b/Lessons/Lesson22/task5/index.html
@@ -22,10 +22,13 @@
         </nav>
         <section class="section">
             <h2 class="section__header">True story</h2>
-            <picture>
-                <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png" media="(min-width: 601px)">
-                <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/small.png">
-                <img src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png" alt="sky">
+            <picture class="section__img">
+                <source srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png"
+                    media="(min-width: 600px)">
+                <source
+                    srcset="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/small.png">
+                <img class="img" src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson22/hw2/big.png"
+                    alt="Nature">
             </picture>
             <p>There are few ways to define <code>font-size</code>:</p>
             <ul class="units-list">
