--- a/Lessons/Lesson23/task3/index.html
+++ b/Lessons/Lesson23/task3/index.html
@@ -16,7 +16,7 @@
             <ul class="menu">
                 <li class="menu__item"><span class="menu__item-text">Home</span></li>
                 <li class="menu__item menu__item_active">
-                    <span class="menu__item-text">Products</span>
+                    <span class="menu__item-text  text-active">Products</span>
                     <ul class="submenu">
                         <li class="submenu__item">Cars</li>
                         <li class="submenu__item">Planes</li>
@@ -27,7 +27,7 @@
             </ul>
         </nav>
     </header>
-    
+
 </body>
 
 </html>
